@@ -10,6 +10,9 @@
 2007-02-01  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/ChangeNames.py: Typo.
 
+2007-01-30  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditFamily.py: catch family-delete signal
+
 2007-01-30  Brian Matherly  <brian@gramps-project.org>
 	* src/docgen/ODFDoc.py: add start_superscript and stop_superscript
 	* src/docgen/KwordDoc.py: add start_superscript and stop_superscript
